updated the platform setting example

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -427,13 +427,28 @@ To retain the old MTU on WAN p2p uplink interfaces use custom_platform_settings
 
 ```diff
 custom_platform_settings:
-  platforms:
-    - AWE-5310
-    - AWE-5510
-    - AWE-7250R
-    - AWE-7230R
-    - AWE-7220R
-+ p2p_uplinks_mtu: 9214
+  - feature_support:
+      bgp_update_wait_for_convergence: true
+      bgp_update_wait_install: false
+      interface_storm_control: false
+      queue_monitor_length_notify: false
+    management_interface: Management1/1
++   p2p_uplinks_mtu: 9214
+    platforms:
+      - AWE-5310
+      - AWE-5510
+      - AWE-7250R
+      - AWE-7230R
+  - feature_support:
+      bgp_update_wait_for_convergence: true
+      bgp_update_wait_install: false
+      interface_storm_control: false
+      poe: true
+      queue_monitor_length_notify: false
+    management_interface: Management1
++   p2p_uplinks_mtu: 9214
+    platforms:
+      - AWE-7220R
 ```
 
 ## Changes to role `arista.avd.eos_cli_config_gen`
