--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -108,7 +108,7 @@ tenants:
 +             always_redistribute_igmp: true
 ```
 
-### `vrf_id` will be used instead of `vrf_vni` to get the ip address of evpn underlay multicast group
+### `vrf_id` is used instead of `vrf_vni` to calculate the IP address of EVPN underlay multicast group for a VRF
 
 AVD versions below 5.0.0 uses `vrf_vni` in the algorithm to set the offset in order to get the IP address of EVPN underlay multicast group.
 
