--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -112,7 +112,9 @@ tenants:
 
 AVD versions below 5.0.0 uses `vrf_vni` in the algorithm to set the offset in order to get the IP address of EVPN underlay multicast group.
 
-In AVD version 5.0.0, `vrf_id` is used instead of `vrf_vni` to set the offset for IP address of EVPN underlay multicast group when `evpn_l3_multicast` is enabled.
+In AVD version 5.0.0, `vrf_id` is used instead of `vrf_vni` to calculate the offset for IP address of EVPN underlay multicast group for a VRF when `evpn_l3_multicast` is enabled. The configurations will only change in case `vrf_id` and `vrf_vni` are set to different values.
+
+To retain the old configuration do not mention `vrf_id` in input or keep `vrf_id` same as `vrf_vni`.
 
 Inputs:
 
