--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -114,9 +114,7 @@ AVD versions below 5.0.0 uses `vrf_vni` in the algorithm to set the offset in or
 
 In AVD version 5.0.0, `vrf_id` is used instead of `vrf_vni` to calculate the offset for IP address of EVPN underlay multicast group for a VRF when `evpn_l3_multicast` is enabled. The configurations will only change in case `vrf_id` and `vrf_vni` are set to different values.
 
-To retain the old configuration do not mention `vrf_id` in input or keep `vrf_id` same as `vrf_vni`.
-
-Inputs:
+To retain the previous configuration, either exclude the `vrf_id` from the input or ensure that `vrf_id` is identical to `vrf_vni`.
 
 ```diff
 tenants:
@@ -126,37 +124,8 @@ tenants:
     vrfs:
       - name: TEN_C_L3_MULTICAST_ENABLED_130_131
         vrf_vni: 31
-+       vrf_id: 66
++       vrf_id: 31
         <...>
-```
-
-```diff
-router_bgp:
-  vrfs:
-    - name: TEN_C_L3_MULTICAST_ENABLED_130_131
--     rd: 192.168.255.7:31
-+     rd: 192.168.255.7:66
-      route_targets:
-        import:
-        - address_family: evpn
-          route_targets:
--         - '31:31'
-+         - 66:66
-        export:
-        - address_family: evpn
-          route_targets:
--         - '31:31'
-+         - 66:66
-    <...>
-vxlan_interface:
-  vxlan1:
-    vxlan:
-      vrfs:
-        - name: TEN_C_L3_MULTICAST_ENABLED_130_131
-        vni: 31
--       multicast_group: 232.0.32.31
-+       multicast_group: 232.0.32.66
-    <...>
 ```
 
 ### Base class for custom IP addressing `AvdIpAddressing` was moved
