--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -317,7 +317,7 @@ The description can be reverted manually if needed:
 
 ### `wan_mode: autovpn` renamed `wan_mode: legacy-autovpn`
 
-With AVD version 5.0.0 the valid values for `wan_mode` key have changed. If using the `autovpn` mode in AVD 4.x, the `wan_mode` key needs tp be updated to `legacy-autovpn`.
+With AVD version 5.0.0 the valid values for `wan_mode` key have changed. If using the `autovpn` mode in AVD 4.x, the `wan_mode` key needs to be updated to `legacy-autovpn`.
 
 ```diff
 -  wan_mode: autovpn
