--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -315,6 +315,15 @@ The description can be reverted manually if needed:
 +mgmt_interface_description: "oob_management"
 ```
 
+### `wan_mode: autovpn` renamed `wan_mode: legacy-autovpn`
+
+With AVD version 5.0.0 the valid values for `wan_mode` key have changed. If using the `autovpn` mode in AVD 4.x, the `wan_mode` key needs to be updated to `legacy-autovpn`.
+
+```diff
+-  wan_mode: autovpn
++  wan_mode: legacy-autovpn
+```
+
 ### custom_structured_configuration_prefix no longer accepts a string
 
 Starting AVD 5.0.0, `custom_structured_configuration_prefix` only accepts a list of strings.
