--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -112,9 +112,9 @@ tenants:
 
 AVD versions below 5.0.0 uses `vrf_vni` in the algorithm to set the offset in order to get the IP address of EVPN underlay multicast group.
 
-In AVD version 5.0.0, `vrf_id` is used instead of `vrf_vni` to calculate the offset for IP address of EVPN underlay multicast group for a VRF when `evpn_l3_multicast` is enabled. The configurations will only change in case `vrf_id` and `vrf_vni` are set to different values.
+In AVD version 5.0.0, `vrf_id` is used instead of `vrf_vni` to calculate the offset for IP address of EVPN underlay multicast group for a VRF when `evpn_l3_multicast` is enabled. The configurations will only change in case `vrf_id` and `vrf_vni` are set to different values or `evpn_l3_multicast.evpn_underlay_l3_multicast_group` is set under `vrfs`.
 
-To retain the previous configuration, either exclude the `vrf_id` from the input or ensure that `vrf_id` is identical to `vrf_vni`.
+To retain the previous configuration, set group ip directly under the `vrfs` using `evpn_l3_multicast.evpn_underlay_l3_multicast_group`
 
 ```diff
 tenants:
@@ -123,8 +123,9 @@ tenants:
       enabled: true
     vrfs:
       - name: TEN_C_L3_MULTICAST_ENABLED_130_131
-        vrf_vni: 31
-+       vrf_id: 31
+        evpn_l3_multicast:
+          enabled: true
++         evpn_underlay_l3_multicast_group: 232.0.64.2
         <...>
 ```
 
