Refactor: Address PR comments

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -196,9 +196,9 @@ With AVD version 5.0.0 the valid values for `wan_mode` key are now `legacy-autov
 
 See the [porting guide](../porting-guides/5.x.x.md#wan-mode-autovpn-renamed-wan-mode-legacy-vpn) for details.
 
-#### Use Control Plane IPsec profile when Data Plane profile is not configured
+#### Use Control Plane IPsec profile for WAN HA when Data Plane profile is not configured
 
-For `wan_ipsec_profiles`, AVD now uses the `control_plane` profile for Data
+For `wan_ipsec_profiles`, AVD now uses the `control_plane` profile for WAN HA Data
 Plane when the `data_plane` profile is not configured.
 
 ### Other breaking or behavioral changes
