updated porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -442,6 +442,22 @@ To retain the previous behaviour, set the value to `false`:
 +shutdown_interfaces_towards_undeployed_peers: false
 ```
 
+### Render `ip igmp snooping vlan` command for version and address only when IGMP snooping querier is enabled
+
+In AVD 4.0.0, the `ip igmp snooping vlan` command for version and address was rendered even when the IGMP snooping querier was not enabled.
+Starting from AVD 5.0.0, the `ip igmp snooping vlan` command for version and address is rendered only when the IGMP snooping querier is enabled.
+
+To retain the old configuration use custom structure configuration.
+```diff
+custom_structured_configuration_ip_igmp_snooping:
+  vlans:
+  - id: 1
+    querier:
+      enabled: false
+      address: 192.168.255.1
+      version: 3
+```
+
 ### Default MTU value changed from `9214` to `9194` for Dps1, WAN HA and WAN p2p uplink interfaces
 
 In AVD 4.0.0, the default MTU for Dps1, WAN HA and WAN p2p uplink interfaces was `9214`.
