Refactor(eos_designs): Use VRF ID instead of VRF VNI as offset for evpn underlay l3 multicast group (#4450)

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -108,6 +108,27 @@ tenants:
 +             always_redistribute_igmp: true
 ```
 
+### `vrf_id` is used instead of `vrf_vni` to calculate the IP address of EVPN underlay multicast group for a VRF
+
+AVD versions below 5.0.0 uses `vrf_vni` in the algorithm to set the offset in order to get the IP address of EVPN underlay multicast group.
+
+In AVD version 5.0.0, `vrf_id` is used instead of `vrf_vni` to calculate the offset for IP address of EVPN underlay multicast group for a VRF when `evpn_l3_multicast` is enabled. The configurations will only change in case `vrf_id` and `vrf_vni` are set to different values or `evpn_l3_multicast.evpn_underlay_l3_multicast_group` is set under `vrfs`.
+
+To retain the previous configuration, set group ip directly under the `vrfs` using `evpn_l3_multicast.evpn_underlay_l3_multicast_group`
+
+```diff
+tenants:
+  - name: Tenant_C
+    evpn_l3_multicast:
+      enabled: true
+    vrfs:
+      - name: TEN_C_L3_MULTICAST_ENABLED_130_131
+        evpn_l3_multicast:
+          enabled: true
++         evpn_underlay_l3_multicast_group: 232.0.64.2
+        <...>
+```
+
 ### Base class for custom IP addressing `AvdIpAddressing` was moved
 
 The `AvdIpAddressing` class was moved from the Ansible collection to `pyavd.api.ip_addressing`. Import statements must be updated.
