updated porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -442,13 +442,12 @@ To retain the previous behaviour, set the value to `false`:
 +shutdown_interfaces_towards_undeployed_peers: false
 ```
 
-### Render `ip igmp snooping vlan` command for version and address only when IGMP snooping querier is enabled
+### Only render IGMP snooping querier version and address when enabled
 
 In AVD 4.0.0, the `ip igmp snooping vlan` command for version and address was rendered even when the IGMP snooping querier was not enabled.
 Starting from AVD 5.0.0, the `ip igmp snooping vlan` command for version and address is rendered only when the IGMP snooping querier is enabled.
 
-To retain the old configuration use custom structure configuration.
-
+To retain the old configuration use custom structured configuration.
 ```diff
 custom_structured_configuration_ip_igmp_snooping:
   vlans:
