--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -156,11 +156,11 @@ Starting AVD 5.0.0, the default MTU for Dps1, WAN HA and WAN p2p uplink interfac
 
 See the [porting guide](../porting-guides/5.x.x.md#default-mtu-value-changed-from-9214-to-9194-for-dps1-wan-ha-and-wan-p2p-uplink-interfaces) for details.
 
-#### Render `ip igmp snooping vlan` command for version and address only when IGMP snooping querier is enabled
+#### Only render IGMP snooping querier version and address when enabled
 
 Starting from AVD 5.0.0, the `ip igmp snooping vlan` command for version and address is rendered only when the IGMP snooping querier is enabled.
 
-See the [porting guide](../porting-guides/5.x.x.md#render-ip-igmp-snooping-vlan-command-for-version-and-address-only-when-igmp-snooping-querier-is-enabled) for details.
+See the [porting guide](../porting-guides/5.x.x.md#only-render-igmp-snooping-querier-version-and-address-when-enabled) for details.
 
 #### ipv6_virtual_router_addresses are now configured if ipv6_enable is true on SVIs
 
