Doc: Add entries in release notes and porting guide

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -80,7 +80,7 @@ As of AVD 5.0.0 the automatic conversion from both of the previous models has be
 
 See the [porting guide](../porting-guides/5.x.x.md#no-auto-conversion-of-old-data-model-for-router_bgpredistribute_routes-and-router_bgpvrfsredistribute_routes) for details.
 
-### `router_isis.address_family_ipv4/6.enabled` is now `Required` to generate the configuration and documentation for router_isis address-families
+#### `router_isis.address_family_ipv4/6.enabled` is now `Required` to generate the configuration and documentation for router_isis address-families
 
 See the [porting guide](../porting-guides/5.x.x.md#router_isisaddress_family_ipv46enabled-is-now-required-to-generate-the-configuration-and-documentation-for-router_isis-address-families) for details.
 
@@ -104,7 +104,7 @@ The `eos_cli_config_gen.jsonschema.json` is no longer generated. This schema was
 
 Starting AVD 5.0.0, the default value for `type` in `ethernet_interfaces` and `port_channel_interfaces` is no longer supported. The `type` key must now be explicitly defined in the input variables if it is needed in the configuration and documentation.
 
-### Removal of `type` key dependency for rendering ethernet/port-channel interfaces configuration and documentation
+#### Removal of `type` key dependency for rendering ethernet/port-channel interfaces configuration and documentation
 
 See the [porting guide](../porting-guides/5.x.x.md#removal-of-type-key-dependency-for-rendering-ethernetport-channel-interfaces-configuration-and-documentation) for details.
 
@@ -201,6 +201,15 @@ See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#avdinterfacedes
 With AVD version 5.0.0 the valid values for `wan_mode` key are now `legacy-autovpn | cv-pathfinder`.
 
 See the [porting guide](../porting-guides/5.x.x.md#wan-mode-autovpn-renamed-wan-mode-legacy-vpn) for details.
+
+#### PREVIEW WAN HA Direct Link now uses Port-Channel by default
+
+TODO: Keep PREVIEW changes at the end as we warn users that PREVIEW mean changes
+
+For WAN direct HA, AVD will now configure a port-channel by default.
+This feature was introduced recently in EOS and may not be supported on your version.
+
+See the [porting guide](../porting-guides/5.x.x.md#preview-wan-ha-direct-link-now-uses-port-channel-by-default) for details.
 
 ### Other breaking or behavioral changes
 
